Исправил замечания по 2 и 3 задаче